Changed the app.py file to faster implementation

--- a/faster_groupby.ipynb
+++ b/faster_groupby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 120,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_received = 'Workload'\n",
+    "switch_received = 'off'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_values = list(data[column_received].unique())\n",
+    "if switch_received == 'off':\n",
+    "    for value in unique_values:\n",
+    "        on_cols.remove(column_received+'_'+value)\n",
+    "        if column_received+'_'+value not in off_cols:\n",
+    "            off_cols.append(column_received+'_'+value)\n",
+    "    \n",
+    "else:\n",
+    "    for value in unique_values:\n",
+    "        off_cols.remove(column_received+'_'+value)\n",
+    "        if column_received+'_'+value not in on_cols:\n",
+    "            on_cols.append(column_received+'_'+value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Workload_Data',\n",
+       " 'Workload_File',\n",
+       " 'Workload_Mail',\n",
+       " 'Workload_Web',\n",
+       " 'FileSystem_btrfs',\n",
+       " 'FileSystem_ext2',\n",
+       " 'FileSystem_ext3',\n",
+       " 'FileSystem_ext4',\n",
+       " 'FileSystem_nilfs2',\n",
+       " 'FileSystem_reiserfs',\n",
+       " 'FileSystem_xfs',\n",
+       " 'BlockSize_1024',\n",
+       " 'BlockSize_2048',\n",
+       " 'BlockSize_4096',\n",
+       " 'InodeSize_1024',\n",
+       " 'InodeSize_128',\n",
+       " 'InodeSize_2048',\n",
+       " 'InodeSize_256',\n",
+       " 'InodeSize_4096',\n",
+       " 'InodeSize_512',\n",
+       " 'InodeSize_8192',\n",
+       " 'InodeSize_none',\n",
+       " 'BlockGroup_128',\n",
+       " 'BlockGroup_16',\n",
+       " 'BlockGroup_2',\n",
+       " 'BlockGroup_256',\n",
+       " 'BlockGroup_32',\n",
+       " 'BlockGroup_4',\n",
+       " 'BlockGroup_64',\n",
+       " 'BlockGroup_8',\n",
+       " 'BlockGroup_none',\n",
+       " 'AtimeOption_noatime',\n",
+       " 'AtimeOption_none',\n",
+       " 'JournalOption_journal',\n",
+       " 'JournalOption_none',\n",
+       " 'JournalOption_ordered',\n",
+       " 'JournalOption_writeback',\n",
+       " 'SpecialOption_compress',\n",
+       " 'SpecialOption_nodatacow',\n",
+       " 'SpecialOption_nodatasum',\n",
+       " 'SpecialOption_none',\n",
+       " 'SpecialOption_notail',\n",
+       " 'IOScheduler_cfq',\n",
+       " 'IOScheduler_deadline',\n",
+       " 'IOScheduler_noop',\n",
+       " 'Device_500sas',\n",
+       " 'Device_sas',\n",
+       " 'Device_sata',\n",
+       " 'Device_ssd']"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "on_cols.remove()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
